// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//  **** IMPORTANT NOTE ****
//
//  The proto of BT data has to match exactly the g3 proto, including tag
//  number.

// REST API URL from the proto in this file:
// ========================================
//    /translate
// ========================================

syntax = "proto3";
option go_package = "./proto";
package datacommons;

// Request to translate a graph query.
message TranslateRequest {
  // String representaion of schema mappings used to translate.
  string schema_mapping = 1;

  // String representation of sparql query.
  string sparql = 2;
}

// Response of a translate request.
message TranslateResponse {
  // The translated sql.
  string sql = 1;

  // Serialized json string of the translation result
  string translation = 2;
}